
             • ‘plot_RLum.Data.Curve()’

                 • Function will not stop anymore if the curve contains
                   ‘NA’ values, but if the curve consists of only ‘NA’
                   values.

             • ‘plot_RLum.Data.Spectrum()’

                 • The interactive plot option was broken with the last
                   update of the package 'plotly'; fixed.

             • ‘read_BIN2R()’

                 • If BIN-files are automatically imported the function
                   skipped non BIN-files without crashing if it is used
                   in combination with the argument ‘pattern’,

                 • add new argument ‘irgnore.RECTYPE’ to provide a
                   solution for broken BIN-files are BIN-files with non
                   documented entries. Furthermore the general
                   behaviour for such cases had been optimised.

             • ‘read_Daybreak2R()’

                 • Add support for DAT-files produced by at 1100 reader
                   using the software (TLAPLLIC v.3.2).  Thanks to
                   Antoine Zink,

                 • minor error corrections and adding example code.

             • ‘template_DRAC()’

                 • Fixed a typo in the column names (#28).

             • ‘use_DRAC()’

                 • Now supports DRAC v1.2 and the newly introduced CSV
                   input template.  Older v1.1 excel sheet input
                   templates are still supported, but users are highly
                   encouraged to use the new CSV file.

                 • Columns in the output tables are now assigned proper
                   classes (#27).

  Internals:

         • The internal function converting BIN-file curves to
           RLum.Data.Curve() objects had been optimised and, amongst
           others, now uses a function written using Rcpp to create the
           curve matrix.  The conversion now works ca. two times
           faster,
